--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,6 +26,7 @@ textarea {
   box-sizing: border-box;
   overscroll-behavior: none;
   overflow: scroll;
+  font-family: 'Courier New', Courier, monospace;
 
   border-radius: 10px;
   padding: 10px;
@@ -37,7 +38,6 @@ textarea {
   
   color: #ffffff;
   background-color: #35353562;
-
 
 }
 
@@ -75,4 +75,55 @@ button {
   color: #ffffff;
   background-color: #35353562;
   cursor: pointer;
+}
+
+.toolbar{
+  position: absolute;
+  display: flex;
+  background-color: #0000003f;
+  padding: 5px;
+  gap: 10px;
+  border-radius: 10px;
+  margin: 15px;
+  user-select: none;
+}
+
+
+
+.top-toolbar {
+  flex-direction: row;
+}
+
+.window-toolbar {
+  left: calc(100vw - 165px);
+}
+
+.toolbar-button {
+  border-radius: 5px;
+  padding: 0px 5px;
+}
+
+.window-button {
+  width: 25px;
+  height: 25px;
+}
+
+.toolbar-button:hover {
+  background-color: #30303080;
+  cursor: pointer;
+}
+
+.toolbar-sub-button {
+  display: none;
+}
+
+.hidden {
+  display: none;
+}
+
+#corner-logo {
+  top: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
 }
